--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -8,151 +8,164 @@
     tools:context=".MainPageActivity"
     tools:showIn="@layout/app_bar_navigation">
 
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <ScrollView
-            android:id="@+id/login_form"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/footer"
-            android:layout_alignParentTop="true"
-            android:background="@color/backgroundColor">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="205dp"
+                android:orientation="horizontal">
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/slide_promotion"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp" />
+
+                <LinearLayout
+                    android:id="@+id/sliderdots"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|bottom"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+            </FrameLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:orientation="vertical">
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/marginLabelMain"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/btn_koin_putih"
-                        style="@style/TextContent.BtnKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:text="@string/koin_putih_label"
-                        android:textAlignment="center"
-                        android:textAllCaps="false"
-                        android:theme="@style/PrimaryButton" />
-
-                    <TextView
-                        android:id="@+id/jml_koin_putih"
-                        style="@style/TextContent.LabelKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:text="12,549 Koin"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/marginLabelMain"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/btn_koin_hijau"
-                        style="@style/TextContent.BtnKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:text="@string/koin_hijau_label"
-                        android:textAlignment="center"
-                        android:theme="@style/PrimaryButton" />
-
-                    <TextView
-                        android:id="@+id/jml_koin_hijau"
-                        style="@style/TextContent.LabelKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-
-                        android:text="@string/not_available"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/marginLabelMain"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/btn_koin_merah"
-                        style="@style/TextContent.BtnKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:text="@string/koin_merah_label"
-                        android:textAlignment="center"
-                        android:theme="@style/PrimaryButton" />
-
-                    <TextView
-                        android:id="@+id/jml_koin_merah"
-                        style="@style/TextContent.LabelKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:text="@string/not_available"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
+                android:layout_marginTop="@dimen/marginLabelMain"
+                android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btn_merchant_login"
+                    android:id="@+id/btn_koin_putih"
                     style="@style/TextContent.BtnKoin"
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:layout_marginTop="30dp"
-                    android:gravity="center"
-                    android:text="@string/merchant_login_button"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="@string/koin_putih_label"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
                     android:theme="@style/PrimaryButton" />
 
-                <LinearLayout
-                    android:id="@+id/menu_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="@dimen/marginLabelMain"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
+                <TextView
+                    android:id="@+id/jml_koin_putih"
+                    style="@style/TextContent.LabelKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="12,549 Koin"
+                    android:textAlignment="center" />
 
-                    <Button
-                        android:id="@+id/btn_bulletin"
-                        style="@style/TextContent.BtnKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/bulletin_label_button"
-                        android:theme="@style/PrimaryButton" />
-
-                    <Button
-                        android:id="@+id/btn_setting"
-                        style="@style/TextContent.BtnKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/settings_label_button"
-                        android:theme="@style/PrimaryButton" />
-
-                </LinearLayout>
             </LinearLayout>
 
-        </ScrollView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginLabelMain"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_koin_hijau"
+                    style="@style/TextContent.BtnKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="@string/koin_hijau_label"
+                    android:textAlignment="center"
+                    android:theme="@style/PrimaryButton" />
+
+                <TextView
+                    android:id="@+id/jml_koin_hijau"
+                    style="@style/TextContent.LabelKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+
+                    android:text="@string/not_available"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginLabelMain"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_koin_merah"
+                    style="@style/TextContent.BtnKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="@string/koin_merah_label"
+                    android:textAlignment="center"
+                    android:theme="@style/PrimaryButton" />
+
+                <TextView
+                    android:id="@+id/jml_koin_merah"
+                    style="@style/TextContent.LabelKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="@string/not_available"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_merchant_login"
+                style="@style/TextContent.BtnKoin"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:text="@string/merchant_login_button"
+                android:theme="@style/PrimaryButton" />
+
+            <LinearLayout
+                android:id="@+id/menu_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="@dimen/marginLabelMain"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <Button
+                    android:id="@+id/btn_bulletin"
+                    style="@style/TextContent.BtnKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/bulletin_label_button"
+                    android:theme="@style/PrimaryButton" />
+
+                <Button
+                    android:id="@+id/btn_setting"
+                    style="@style/TextContent.BtnKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/settings_label_button"
+                    android:theme="@style/PrimaryButton" />
+
+            </LinearLayout>
+        </LinearLayout>
 
 
         <LinearLayout
